Fix overflow to prevent markers from being on top of everything.

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -6,7 +6,6 @@
 
 
 .mapboxgl-map {
-  overflow: unset !important;
   position: sticky !important;
   top: 0 !important;
   z-index: 10;
